# moonlight-common-c

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  limelight-common.sln  make_fat_lib.sh
.github/workflows/: build-docs.yml  ci.yml  codeql.yml  release.yml
cmake/: FindMbedTLS.cmake
docs/: Doxyfile  Doxyfile.in
limelight-common/: AudioStream.c  ByteBuffer.c  ByteBuffer.cpp  ByteBuffer.h  Config.c  Config.cpp  Connection.c  Connection.cpp  ControlStream.c  ControlStream.cpp  FakeCallbacks.c  Handshake.c  Handshake.cpp  Input.h  InputStream.c  Limelight-internal.h  Limelight.h  LinkedBlockingQueue.c  LinkedBlockingQueue.cpp  LinkedBlockingQueue.h  Misc.c  Platform.c  Platform.h  PlatformSockets.c  PlatformSockets.cpp  PlatformSockets.h  PlatformThreads.c  PlatformThreads.cpp  PlatformThreads.h  RtpReorderQueue.c  RtpReorderQueue.h  Rtsp.h  RtspConnection.c  RtspParser.c  SdpGenerator.c  Video.h  VideoDepacketizer.c  VideoDepacketizer.cpp  VideoStream.c  VideoStream.cpp  (+2 more)
limelight-common.xcodeproj/: project.pbxproj
limelight-common.xcodeproj/project.xcworkspace/xcuserdata/diegowaxemberg.xcuserdatad/: UserInterfaceState.xcuserstate
limelight-common.xcodeproj/xcuserdata/diegowaxemberg.xcuserdatad/xcschemes/: limelight-common.xcscheme  xcschememanagement.plist
limelight-common/OpenAES/: oaes_base64.c  oaes_base64.h  oaes_config.h  oaes_lib.c  oaes_lib.h
moonlight-common.xcodeproj/: project.pbxproj
moonlight-common.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
nanors/: LICENSE  rs.c  rs.h
reedsolomon/: rs.c
src/: AudioStream.c  ByteBuffer.c  ByteBuffer.h  Connection.c  ConnectionTester.c  ControlStream.c  FakeCallbacks.c  Input.h  InputStream.c  Limelight-internal.h  Limelight.h  LinkedBlockingQueue.c  LinkedBlockingQueue.h  MicrophoneStream.c  Misc.c  Platform.c  Platform.h  PlatformCrypto.c  PlatformCrypto.h  PlatformSockets.c  PlatformSockets.h  PlatformThreads.h  RecorderCallbacks.c  RtpAudioQueue.c  RtpAudioQueue.h  RtpFecQueue.c  RtpFecQueue.h  RtpReorderQueue.c  RtpReorderQueue.h  RtpVideoQueue.c  RtpVideoQueue.h  Rtsp.h  RtspConnection.c  RtspParser.c  SdpGenerator.c  SimpleStun.c  Video.h  VideoDepacketizer.c  VideoStream.c  rswrapper.c
src/OpenAES/: oaes_common.h  oaes_lib.c
